--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -34,10 +34,10 @@
           {{ country.capital }}
         </td>
         <td>
-          {{ country.population }}
+          {{ country.population | number }}
         </td>
         <td>
-          <a href="#">Ver más</a>
+          <a [routerLink]="['/countries/by', country.cca3]">Info</a>
         </td>
       </tr>
     </tbody>
